--- a/public/css/application.css
+++ b/public/css/application.css
@@ -34,14 +34,10 @@ header {
   max-width: 90vh;
 }
 
-header,
-footer {
-  padding: 25px 0;
-}
-
 header {
   background-image: linear-gradient(to bottom, #130742, #170758);
   background-repeat: no-repeat;
+  padding: 25px 0;
 }
 
 main {
@@ -54,6 +50,7 @@ footer {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  padding: 25px 0;
 }
 
 .board {
@@ -67,11 +64,6 @@ footer {
   aspect-ratio: 1 / 1;
 }
 
-.board .light {
-  justify-self: stretch;
-  align-self: stretch;
-}
-
 .board figcaption {
   grid-column: 1 / 7;
   display: flex;
@@ -80,7 +72,9 @@ footer {
   padding: 0 25px;
 }
 
-.board .light {
+.light {
+  justify-self: stretch;
+  align-self: stretch;
   border: none;
   width: 100%;
   height: 100%;
@@ -88,15 +82,15 @@ footer {
   transition: background-color 250ms ease-out 100ms;
 }
 
-.board .light:hover {
+.light:hover {
   background-color: #1e8645;
 }
 
-.board .light.on {
+.light.on {
   background-color: #0fc831;
 }
 
-.board .light.on:hover {
+.light.on:hover {
   background-color: #12ed3a;
 }
 
